<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <!-- aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:id="@+id/imgItem"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/imageDiscr"
                    android:background="#00ffffff"
                    android:scaleType="centerCrop"
                    android:src="@drawable/loc"

                    android:clickable="true"
                    android:layout_gravity="center_horizontal" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Author"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffc4c4c4"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/itemAuthor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffffff"
                        android:layout_marginLeft="85dp"
                        android:layout_weight="3" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textAppearance="?android:attr/textAppearanceMedium"

                        android:textColor="#ffc4c4c4"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/addresItem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffffff"
                        android:layout_marginLeft="70dp"
                        android:layout_weight="3" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Type"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffc4c4c4"
                        android:layout_weight="2" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:id="@+id/itemType"
                        android:background="#00ffffff"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Large Text"
                        android:id="@+id/itemTypeText"
                        android:layout_weight="3"
                        android:textColor="#FFFFFFFF" />

                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/categoryOfthePlace"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffc4c4c4"
                        android:layout_weight="2" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:id="@+id/itemCat"
                        android:background="#00ffffff"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Large Text"
                        android:id="@+id/itemCategory"
                        android:layout_weight="3"
                        android:textColor="#FFFFFFFF" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Comments"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffc4c4c4"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/commentItem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFFFFFF"
                        android:layout_weight="3" />
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>