<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <!-- aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="У вас отключен интернет, программа автоматичесий сохранит пандус, когда включен интернет"
                    android:id="@+id/textView20" />

                <ImageView
                    android:id="@+id/imgItem2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/imageDiscr"
                    android:background="#00ffffff"
                    android:scaleType="centerCrop"
                    android:src="@drawable/loc"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:clickable="true"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textAppearance="?android:attr/textAppearanceSmall"

                    android:textColor="#ffc4c4c4"
                    android:gravity="center_horizontal"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/addressField2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:textColor="#fffcfaff" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/typeOfthePlace"
                    android:textAppearance="?android:attr/textAppearanceSmall"

                    android:textColor="#ffc4c4c4"
                    android:gravity="center_horizontal"
                    android:textSize="20dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"></LinearLayout>

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:id="@+id/greenButton2"
                        android:src="@drawable/ramp_green"
                        android:background="#00ffffff"
                        android:scaleType="fitCenter" />
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:id="@+id/yellowButton2"
                        android:src="@drawable/ramp_yellow"
                        android:background="#00ffffff"
                        android:scaleType="fitCenter" />
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:id="@+id/redButton2"
                        android:src="@drawable/ramp_red"
                        android:background="#00ffffff"
                        android:scaleType="fitCenter" />

                </LinearLayout>



                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/categoryOfthePlace"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffc4c4c4"
                    android:gravity="center_horizontal"
                    android:textSize="20dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <ImageButton
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:id="@+id/icon_cat_22"
                            android:src="@drawable/icon_cafe_1"
                            android:background="#00ffffff"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Cafe"
                            android:id="@+id/textView13"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#ffcbc9ca"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <ImageButton
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:id="@+id/icon_cat_12"
                            android:src="@drawable/icon_baby_1"
                            android:background="#00ffffff"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="For Kids"
                            android:id="@+id/textView2"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#ffcbc9ca"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <ImageButton
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:id="@+id/icon_cat_32"
                            android:src="@drawable/icon_edu_1"
                            android:background="#00ffffff"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Education"
                            android:id="@+id/textView10"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#ffcbc9ca"
                            android:textSize="15dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <ImageButton
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:id="@+id/icon_cat_42"
                            android:src="@drawable/icon_flat_1"
                            android:background="#00ffffff"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="House"
                            android:id="@+id/textView14"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#ffcbc9ca"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <ImageButton
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:id="@+id/icon_cat_52"
                            android:src="@drawable/icon_med_1"
                            android:background="#00ffffff"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Medicine"
                            android:id="@+id/textView15"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#ffcbc9ca"
                            android:textSize="15dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <ImageButton
                            android:layout_width="fill_parent"
                            android:layout_height="100dp"
                            android:layout_weight="1"
                            android:id="@+id/icon_cat_62"
                            android:src="@drawable/icon_shop_1"
                            android:background="#00ffffff"
                            android:scaleType="fitCenter" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Else"
                            android:id="@+id/textView16"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:layout_gravity="center_horizontal"
                            android:textColor="#ffcbc9ca"
                            android:textSize="15dp" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Comments"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#ffc4c4c4"
                    android:gravity="center_horizontal"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/inDetailField2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:textColor="#fffcfaff">
                </EditText>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Anonymous:"
                    android:id="@+id/switchAnon2"
                    android:textOn="Yes"
                    android:textOff="No"
                    android:checked="false"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="#ffc4c4c4"
                    android:layout_gravity="center_horizontal" />


                <Button
                    android:id="@+id/sendBtn2"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/create"
                    android:background="@drawable/button_success_selector"
                    android:textColor="#fff"
                    android:layout_below="@+id/inDetailField"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>